# pacingjosh-video-manager

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TROUBLESHOOTING.md
backend/: run.py  (+6 more)
backend-rust/: Cargo.toml  README.md
backend-rust/migrations/001_create_tables/: down.sql  up.sql
backend-rust/migrations/002_ai_generations/: down.sql  up.sql
backend-rust/migrations/003_ai_youtube_fields/: down.sql  up.sql
backend-rust/migrations/004_production_edits/: down.sql  up.sql
backend-rust/migrations/005_edit_logs/: down.sql  up.sql
backend-rust/migrations/006_edit_rerender/: down.sql  up.sql
backend-rust/migrations/007_edit_copy/: down.sql  up.sql
backend-rust/migrations/008_edit_thumbnail/: down.sql  up.sql
backend-rust/migrations/009_production_publishing/: down.sql  up.sql
backend-rust/migrations/010_semantic_search/: down.sql  up.sql
backend-rust/migrations/011_visual_description/: down.sql  up.sql
backend-rust/src/: config.rs  db.rs  lib.rs  main.rs  schema.rs  utils.rs
backend-rust/src/models/: ai.rs  edit.rs  mod.rs  production.rs  tag.rs  video.rs
backend-rust/src/routes/: ai.rs  config_routes.rs  edit.rs  mod.rs  productions.rs  scan.rs  search.rs  stream.rs  tags.rs  videos.rs
backend-rust/src/services/: ai_service.rs  edit_service.rs  embedding_service.rs  ffmpeg_service.rs  mod.rs  overlay_service.rs  production_service.rs  scanner.rs  search_service.rs  video_service.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
(+80 files in other folders)
