[package]
name = "video-manager-backend"
version = "1.0.0"
edition = "2021"

[lib]
name = "video_manager_backend"
path = "src/lib.rs"

[[bin]]
name = "video-manager-backend"
path = "src/main.rs"

[dependencies]
actix-web = "=4.9.0"
actix-cors = "=0.7.0"
actix-files = "=0.6.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
log = "0.4"
walkdir = "2"
mime_guess = "2"
sha2 = "0.10"
